added first version of BondOrderCalculator as a future replacement for the bond oder calculation inside BondCalculator. Added some query features, improved logic of bondLengthSet to include also number of bond neighbours as criterion,